--- a/become-a-host/price.html
+++ b/become-a-host/price.html
@@ -1157,7 +1157,7 @@
               <div class="_kedp3u"><h2 tabindex="-1" class="heading" elementtiming="LCP-target">Read our best tips</h2></div>
               <div class="_lvhhqo">
                <a rel="noopener noreferrer" target="_blank" href="https://www.airbnb.com/resources/hosting-homes/a/how-to-define-what-kind-of-space-youre-hosting-361" class="_tx7p69r">
-                <div class="_v0gz4uz" style="--dls-liteimage-padding-top: 55.9633%;">
+                <div class="lite-image" style="--dls-liteimage-padding-top: 55.9633%;">
                  <div class="_4626ulj">
                   <img
                    class="_91slf2a"
