--- a/listings-product/products-plus.html
+++ b/listings-product/products-plus.html
@@ -19700,7 +19700,7 @@
                                 <div class="_cwu2wau">
                                   <div class="_vzrbjl">Self check-in</div>
                                   <div class="_114q92b" style="height: 88px; width: 88px;">
-                                    <div class="_v0gz4uz" style="--dls-liteimage-padding-top:100%;">
+                                    <div class="lite-image" style="--dls-liteimage-padding-top:100%;">
                                       <div class="_4626ulj">
                                         <picture>
                                           <source
@@ -19733,7 +19733,7 @@
                                 <div class="_cwu2wau">
                                   <div class="_vzrbjl">Free parking on premises</div>
                                   <div class="_114q92b" style="height: 88px; width: 88px;">
-                                    <div class="_v0gz4uz" style="--dls-liteimage-padding-top:100%;">
+                                    <div class="lite-image" style="--dls-liteimage-padding-top:100%;">
                                       <div class="_4626ulj">
                                         <picture>
                                           <source
@@ -19766,7 +19766,7 @@
                                 <div class="_cwu2wau">
                                   <div class="_vzrbjl">Pool</div>
                                   <div class="_114q92b" style="height: 88px; width: 88px;">
-                                    <div class="_v0gz4uz" style="--dls-liteimage-padding-top:100%;">
+                                    <div class="lite-image" style="--dls-liteimage-padding-top:100%;">
                                       <div class="_4626ulj">
                                         <picture>
                                           <source
@@ -19799,7 +19799,7 @@
                                 <div class="_cwu2wau">
                                   <div class="_vzrbjl">Full kitchen</div>
                                   <div class="_114q92b" style="height: 88px; width: 88px;">
-                                    <div class="_v0gz4uz" style="--dls-liteimage-padding-top:100%;">
+                                    <div class="lite-image" style="--dls-liteimage-padding-top:100%;">
                                       <div class="_4626ulj">
                                         <picture>
                                           <source
@@ -19832,7 +19832,7 @@
                                 <div class="_cwu2wau">
                                   <div class="_vzrbjl">Washer</div>
                                   <div class="_114q92b" style="height: 88px; width: 88px;">
-                                    <div class="_v0gz4uz" style="--dls-liteimage-padding-top:100%;">
+                                    <div class="lite-image" style="--dls-liteimage-padding-top:100%;">
                                       <div class="_4626ulj">
                                         <picture>
                                           <source
@@ -19865,7 +19865,7 @@
                                 <div class="_cwu2wau">
                                   <div class="_vzrbjl">Dryer</div>
                                   <div class="_114q92b" style="height: 88px; width: 88px;">
-                                    <div class="_v0gz4uz" style="--dls-liteimage-padding-top:100%;">
+                                    <div class="lite-image" style="--dls-liteimage-padding-top:100%;">
                                       <div class="_4626ulj">
                                         <picture>
                                           <source
@@ -19898,7 +19898,7 @@
                                 <div class="_cwu2wau">
                                   <div class="_vzrbjl">Dishwasher</div>
                                   <div class="_114q92b" style="height: 88px; width: 88px;">
-                                    <div class="_v0gz4uz" style="--dls-liteimage-padding-top:100%;">
+                                    <div class="lite-image" style="--dls-liteimage-padding-top:100%;">
                                       <div class="_4626ulj">
                                         <picture>
                                           <source
@@ -19931,7 +19931,7 @@
                                 <div class="_cwu2wau">
                                   <div class="_vzrbjl">Indoor fireplace</div>
                                   <div class="_114q92b" style="height: 88px; width: 88px;">
-                                    <div class="_v0gz4uz" style="--dls-liteimage-padding-top:100%;">
+                                    <div class="lite-image" style="--dls-liteimage-padding-top:100%;">
                                       <div class="_4626ulj">
                                         <picture>
                                           <source
@@ -19964,7 +19964,7 @@
                                 <div class="_cwu2wau">
                                   <div class="_vzrbjl">Room-darkening shades</div>
                                   <div class="_114q92b" style="height: 88px; width: 88px;">
-                                    <div class="_v0gz4uz" style="--dls-liteimage-padding-top:100%;">
+                                    <div class="lite-image" style="--dls-liteimage-padding-top:100%;">
                                       <div class="_4626ulj">
                                         <picture>
                                           <source
@@ -19997,7 +19997,7 @@
                                 <div class="_cwu2wau">
                                   <div class="_vzrbjl">Heating</div>
                                   <div class="_114q92b" style="height: 88px; width: 88px;">
-                                    <div class="_v0gz4uz" style="--dls-liteimage-padding-top:100%;">
+                                    <div class="lite-image" style="--dls-liteimage-padding-top:100%;">
                                       <div class="_4626ulj">
                                         <picture>
                                           <source
@@ -20030,7 +20030,7 @@
                                 <div class="_cwu2wau">
                                   <div class="_vzrbjl">Air conditioning</div>
                                   <div class="_114q92b" style="height: 88px; width: 88px;">
-                                    <div class="_v0gz4uz" style="--dls-liteimage-padding-top:100%;">
+                                    <div class="lite-image" style="--dls-liteimage-padding-top:100%;">
                                       <div class="_4626ulj">
                                         <picture>
                                           <source
@@ -20063,7 +20063,7 @@
                                 <div class="_cwu2wau">
                                   <div class="_vzrbjl">High chair</div>
                                   <div class="_114q92b" style="height: 88px; width: 88px;">
-                                    <div class="_v0gz4uz" style="--dls-liteimage-padding-top:100%;">
+                                    <div class="lite-image" style="--dls-liteimage-padding-top:100%;">
                                       <div class="_4626ulj">
                                         <picture>
                                           <source
@@ -20096,7 +20096,7 @@
                                 <div class="_cwu2wau">
                                   <div class="_vzrbjl">Bathtub</div>
                                   <div class="_114q92b" style="height: 88px; width: 88px;">
-                                    <div class="_v0gz4uz" style="--dls-liteimage-padding-top:100%;">
+                                    <div class="lite-image" style="--dls-liteimage-padding-top:100%;">
                                       <div class="_4626ulj">
                                         <picture>
                                           <source
@@ -20129,7 +20129,7 @@
                                 <div class="_cwu2wau">
                                   <div class="_vzrbjl">Backyard</div>
                                   <div class="_114q92b" style="height: 88px; width: 88px;">
-                                    <div class="_v0gz4uz" style="--dls-liteimage-padding-top:100%;">
+                                    <div class="lite-image" style="--dls-liteimage-padding-top:100%;">
                                       <div class="_4626ulj">
                                         <picture>
                                           <source
@@ -20162,7 +20162,7 @@
                                 <div class="_cwu2wau">
                                   <div class="_vzrbjl">Crib</div>
                                   <div class="_114q92b" style="height: 88px; width: 88px;">
-                                    <div class="_v0gz4uz" style="--dls-liteimage-padding-top:100%;">
+                                    <div class="lite-image" style="--dls-liteimage-padding-top:100%;">
                                       <div class="_4626ulj">
                                         <picture>
                                           <source
@@ -20195,7 +20195,7 @@
                                 <div class="_cwu2wau">
                                   <div class="_vzrbjl">Children’s books and toys</div>
                                   <div class="_114q92b" style="height: 88px; width: 88px;">
-                                    <div class="_v0gz4uz" style="--dls-liteimage-padding-top:100%;">
+                                    <div class="lite-image" style="--dls-liteimage-padding-top:100%;">
                                       <div class="_4626ulj">
                                         <picture>
                                           <source
@@ -20228,7 +20228,7 @@
                                 <div class="_cwu2wau">
                                   <div class="_vzrbjl">Pool toys</div>
                                   <div class="_114q92b" style="height: 88px; width: 88px;">
-                                    <div class="_v0gz4uz" style="--dls-liteimage-padding-top:100%;">
+                                    <div class="lite-image" style="--dls-liteimage-padding-top:100%;">
                                       <div class="_4626ulj">
                                         <picture>
                                           <source
@@ -20267,7 +20267,7 @@
                                 <div class="_cwu2wau">
                                   <div class="_vzrbjl">Wifi</div>
                                   <div class="_114q92b" style="height: 88px; width: 88px;">
-                                    <div class="_v0gz4uz" style="--dls-liteimage-padding-top:100%;">
+                                    <div class="lite-image" style="--dls-liteimage-padding-top:100%;">
                                       <div class="_4626ulj">
                                         <picture>
                                           <source
@@ -20300,7 +20300,7 @@
                                 <div class="_cwu2wau">
                                   <div class="_vzrbjl">TV</div>
                                   <div class="_114q92b" style="height: 88px; width: 88px;">
-                                    <div class="_v0gz4uz" style="--dls-liteimage-padding-top:100%;">
+                                    <div class="lite-image" style="--dls-liteimage-padding-top:100%;">
                                       <div class="_4626ulj">
                                         <picture>
                                           <source
@@ -20335,7 +20335,7 @@
                                       and toilet paper</div>
                                   </div>
                                   <div class="_114q92b" style="height: 88px; width: 88px;">
-                                    <div class="_v0gz4uz" style="--dls-liteimage-padding-top:100%;">
+                                    <div class="lite-image" style="--dls-liteimage-padding-top:100%;">
                                       <div class="_4626ulj">
                                         <picture>
                                           <source
@@ -20370,7 +20370,7 @@
                                       hangers</div>
                                   </div>
                                   <div class="_114q92b" style="height: 88px; width: 88px;">
-                                    <div class="_v0gz4uz" style="--dls-liteimage-padding-top:100%;">
+                                    <div class="lite-image" style="--dls-liteimage-padding-top:100%;">
                                       <div class="_4626ulj">
                                         <picture>
                                           <source
@@ -20403,7 +20403,7 @@
                                 <div class="_cwu2wau">
                                   <div class="_vzrbjl">Coffee maker</div>
                                   <div class="_114q92b" style="height: 88px; width: 88px;">
-                                    <div class="_v0gz4uz" style="--dls-liteimage-padding-top:100%;">
+                                    <div class="lite-image" style="--dls-liteimage-padding-top:100%;">
                                       <div class="_4626ulj">
                                         <picture>
                                           <source
@@ -20436,7 +20436,7 @@
                                 <div class="_cwu2wau">
                                   <div class="_vzrbjl">Hair dryer</div>
                                   <div class="_114q92b" style="height: 88px; width: 88px;">
-                                    <div class="_v0gz4uz" style="--dls-liteimage-padding-top:100%;">
+                                    <div class="lite-image" style="--dls-liteimage-padding-top:100%;">
                                       <div class="_4626ulj">
                                         <picture>
                                           <source
@@ -20469,7 +20469,7 @@
                                 <div class="_cwu2wau">
                                   <div class="_vzrbjl">Iron</div>
                                   <div class="_114q92b" style="height: 88px; width: 88px;">
-                                    <div class="_v0gz4uz" style="--dls-liteimage-padding-top:100%;">
+                                    <div class="lite-image" style="--dls-liteimage-padding-top:100%;">
                                       <div class="_4626ulj">
                                         <picture>
                                           <source
@@ -20505,7 +20505,7 @@
                                       and maintained.</div>
                                   </div>
                                   <div class="_114q92b" style="height: 88px; width: 88px;">
-                                    <div class="_v0gz4uz" style="--dls-liteimage-padding-top:100%;">
+                                    <div class="lite-image" style="--dls-liteimage-padding-top:100%;">
                                       <div class="_4626ulj">
                                         <picture>
                                           <source
@@ -20541,7 +20541,7 @@
                                       maintained.</div>
                                   </div>
                                   <div class="_114q92b" style="height: 88px; width: 88px;">
-                                    <div class="_v0gz4uz" style="--dls-liteimage-padding-top:100%;">
+                                    <div class="lite-image" style="--dls-liteimage-padding-top:100%;">
                                       <div class="_4626ulj">
                                         <picture>
                                           <source
@@ -20574,7 +20574,7 @@
                                 <div class="_cwu2wau">
                                   <div class="_vzrbjl">Fire extinguisher</div>
                                   <div class="_114q92b" style="height: 88px; width: 88px;">
-                                    <div class="_v0gz4uz" style="--dls-liteimage-padding-top:100%;">
+                                    <div class="lite-image" style="--dls-liteimage-padding-top:100%;">
                                       <div class="_4626ulj">
                                         <picture>
                                           <source
