--- a/submission/photo-upload.html
+++ b/submission/photo-upload.html
@@ -1051,7 +1051,7 @@
                                 <div class="_1dnt01i">
                                  <div class="_b328lf" role="img" tabindex="0" aria-label="Photo collage  with a variety of details and angles">
                                   <div class="_13ucou1">
-                                   <div class="_v0gz4uz" role="img" aria-busy="false" aria-label="Photo collage  with a variety of details and angles" style="--dls-liteimage-padding-top: 133.333%;">
+                                   <div class="lite-image" role="img" aria-busy="false" aria-label="Photo collage  with a variety of details and angles" style="--dls-liteimage-padding-top: 133.333%;">
                                     <div class="_4626ulj">
                                      <img
                                       class="_91slf2a"
@@ -1066,7 +1066,7 @@
                                      <div class="_10xjrv2u" style="background-image: url('https://a0.muscache.com/pictures/258a39d7-5728-4ee5-8bda-52c6d39aec19.jpg'); background-size: cover;"></div>
                                     </div>
                                    </div>
-                                   <div class="_v0gz4uz" role="img" aria-busy="false" aria-label="Photo collage  with a variety of details and angles" style="--dls-liteimage-padding-top: 133.333%;">
+                                   <div class="lite-image" role="img" aria-busy="false" aria-label="Photo collage  with a variety of details and angles" style="--dls-liteimage-padding-top: 133.333%;">
                                     <div class="_4626ulj">
                                      <img
                                       class="_91slf2a"
@@ -1081,7 +1081,7 @@
                                      <div class="_10xjrv2u" style="background-image: url('https://a0.muscache.com/pictures/1741cb4d-5e30-47e3-bb57-9afd60383323.jpg'); background-size: cover;"></div>
                                     </div>
                                    </div>
-                                   <div class="_v0gz4uz" role="img" aria-busy="false" aria-label="Photo collage  with a variety of details and angles" style="--dls-liteimage-padding-top: 133.333%;">
+                                   <div class="lite-image" role="img" aria-busy="false" aria-label="Photo collage  with a variety of details and angles" style="--dls-liteimage-padding-top: 133.333%;">
                                     <div class="_4626ulj">
                                      <img
                                       class="_91slf2a"
@@ -1096,7 +1096,7 @@
                                      <div class="_10xjrv2u" style="background-image: url('https://a0.muscache.com/pictures/eefcd6c3-bc66-45c5-9494-9ef414bf2863.jpg'); background-size: cover;"></div>
                                     </div>
                                    </div>
-                                   <div class="_v0gz4uz" role="img" aria-busy="false" aria-label="Photo collage  with a variety of details and angles" style="--dls-liteimage-padding-top: 133.333%;">
+                                   <div class="lite-image" role="img" aria-busy="false" aria-label="Photo collage  with a variety of details and angles" style="--dls-liteimage-padding-top: 133.333%;">
                                     <div class="_4626ulj">
                                      <img
                                       class="_91slf2a"
@@ -1123,7 +1123,7 @@
                                  </div>
                                  <div class="_b328lf" role="img" tabindex="0" aria-label="Photo collage with  the same subjects and angles">
                                   <div class="_13ucou1">
-                                   <div class="_v0gz4uz" role="img" aria-busy="false" aria-label="Photo collage with  the same subjects and angles" style="--dls-liteimage-padding-top: 133.333%;">
+                                   <div class="lite-image" role="img" aria-busy="false" aria-label="Photo collage with  the same subjects and angles" style="--dls-liteimage-padding-top: 133.333%;">
                                     <div class="_4626ulj">
                                      <img
                                       class="_91slf2a"
@@ -1138,7 +1138,7 @@
                                      <div class="_10xjrv2u" style="background-image: url('https://a0.muscache.com/pictures/961fd95e-ca8a-4661-9416-60299fc4d186.jpg'); background-size: cover;"></div>
                                     </div>
                                    </div>
-                                   <div class="_v0gz4uz" role="img" aria-busy="false" aria-label="Photo collage with  the same subjects and angles" style="--dls-liteimage-padding-top: 133.333%;">
+                                   <div class="lite-image" role="img" aria-busy="false" aria-label="Photo collage with  the same subjects and angles" style="--dls-liteimage-padding-top: 133.333%;">
                                     <div class="_4626ulj">
                                      <img
                                       class="_91slf2a"
@@ -1153,7 +1153,7 @@
                                      <div class="_10xjrv2u" style="background-image: url('https://a0.muscache.com/pictures/974f69d8-9e8d-4eb3-bfef-123afb66f202.jpg'); background-size: cover;"></div>
                                     </div>
                                    </div>
-                                   <div class="_v0gz4uz" role="img" aria-busy="false" aria-label="Photo collage with  the same subjects and angles" style="--dls-liteimage-padding-top: 133.333%;">
+                                   <div class="lite-image" role="img" aria-busy="false" aria-label="Photo collage with  the same subjects and angles" style="--dls-liteimage-padding-top: 133.333%;">
                                     <div class="_4626ulj">
                                      <img
                                       class="_91slf2a"
@@ -1168,7 +1168,7 @@
                                      <div class="_10xjrv2u" style="background-image: url('https://a0.muscache.com/pictures/e4c6009f-9344-4234-a952-253e54fed598.jpg'); background-size: cover;"></div>
                                     </div>
                                    </div>
-                                   <div class="_v0gz4uz" role="img" aria-busy="false" aria-label="Photo collage with  the same subjects and angles" style="--dls-liteimage-padding-top: 133.333%;">
+                                   <div class="lite-image" role="img" aria-busy="false" aria-label="Photo collage with  the same subjects and angles" style="--dls-liteimage-padding-top: 133.333%;">
                                     <div class="_4626ulj">
                                      <img
                                       class="_91slf2a"
@@ -1198,7 +1198,7 @@
                                  <h2 tabindex="-1" class="heading" elementtiming="LCP-target"><span class="_kedp3u">Show candid moments that accurately illustrate your experience.</span></h2>
                                  <div class="_1dnt01i">
                                   <div class="_b328lf" role="img" tabindex="0" aria-label="Photo of a candid moment">
-                                   <div class="_v0gz4uz" role="img" aria-busy="false" aria-label="Photo of a candid moment" style="border-radius: 12px; --dls-liteimage-padding-top: 133.333%;">
+                                   <div class="lite-image" role="img" aria-busy="false" aria-label="Photo of a candid moment" style="border-radius: 12px; --dls-liteimage-padding-top: 133.333%;">
                                     <div class="_4626ulj">
                                      <img
                                       class="_91slf2a"
@@ -1223,7 +1223,7 @@
                                    </div>
                                   </div>
                                   <div class="_b328lf" role="img" tabindex="0" aria-label="Photo of a pose that is not candid">
-                                   <div class="_v0gz4uz" role="img" aria-busy="false" aria-label="Photo of a pose that is not candid" style="border-radius: 12px; --dls-liteimage-padding-top: 133.333%;">
+                                   <div class="lite-image" role="img" aria-busy="false" aria-label="Photo of a pose that is not candid" style="border-radius: 12px; --dls-liteimage-padding-top: 133.333%;">
                                     <div class="_4626ulj">
                                      <img
                                       class="_91slf2a"
