--- a/listings-product/places.html
+++ b/listings-product/places.html
@@ -432,7 +432,7 @@
                                             data-key="https://a0.muscache.com/im/pictures/e557bf4b-cde7-4107-a696-2c22ab889b69.jpg?aki_policy=large"
                                             class="h-full"
                                           >
-                                            <div class="_v0gz4uz" style="--dls-liteimage-padding-top: 56%">
+                                            <div class="lite-image" style="--dls-liteimage-padding-top: 56%">
                                               <div class="_4626ulj">
                                                 <img
                                                   class="_91slf2a"
@@ -465,7 +465,7 @@
                                             data-key="https://a0.muscache.com/im/pictures/34527a29-4963-4a2a-9a15-c694574accbb.jpg?aki_policy=large"
                                             class="h-full"
                                           >
-                                            <div class="_v0gz4uz" style="--dls-liteimage-padding-top: 56%">
+                                            <div class="lite-image" style="--dls-liteimage-padding-top: 56%">
                                               <div class="_4626ulj">
                                                 <img
                                                   class="_91slf2a"
@@ -497,7 +497,7 @@
                                             data-key="https://a0.muscache.com/im/pictures/c5af983b-869e-4b0f-bfc4-e0f1e045e154.jpg?aki_policy=large"
                                             class="h-full"
                                           >
-                                            <div class="_v0gz4uz" style="--dls-liteimage-padding-top: 56%">
+                                            <div class="lite-image" style="--dls-liteimage-padding-top: 56%">
                                               <div class="_4626ulj">
                                                 <img
                                                   class="_91slf2a"
@@ -529,7 +529,7 @@
                                             data-key="https://a0.muscache.com/im/pictures/d12c4075-afcf-487e-be87-9ab79c2029bf.jpg?aki_policy=large"
                                             class="h-full"
                                           >
-                                            <div class="_v0gz4uz" style="--dls-liteimage-padding-top: 56%">
+                                            <div class="lite-image" style="--dls-liteimage-padding-top: 56%">
                                               <div class="_4626ulj">
                                                 <img
                                                   class="_91slf2a"
